# emawp

./: CMakeLists.txt  README.md  appversion  emawp-config-version.cmake.in  emawp-config.cmake.in
cmake/: emawp-config.cmake.in
include/: emawp.h
src/: CMakeLists.txt  awp.c  emawp-tool.c
